Use Mongoose SSI to generate web page content
Using Mongoose Server Side Include (SSI) to call an event handler to generate content for the web page.

--- a/MonooseExampleWindows/MonooseExampleWindows.vcxproj
+++ b/MonooseExampleWindows/MonooseExampleWindows.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <None Include="login.html" />
     <None Include="index.shtml" />
+    <None Include="showdata.shtml" />
     <None Include="test.html" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
